Fix styles for overflow contents

--- a/assets/css/text.scss
+++ b/assets/css/text.scss
@@ -1,5 +1,21 @@
 @charset "UTF-8";
 
+@mixin scrollbar {
+    overflow-x: scroll;
+    display: block;
+
+    &::-webkit-scrollbar {
+        height: 10px;
+    }
+    &::-webkit-scrollbar-thumb {
+        border-radius: 10px;
+        background-color: rgba(0, 0, 0, .2);
+    }
+    &::-webkit-scrollbar-track {
+        border-radius: 10px;
+    }
+}
+
 img {
     border: 1px solid #000;
     max-width: 100%;
@@ -65,6 +81,8 @@ img {
         color: #333;
         background: #f5f5f5;
         padding: 0.5em 1em;
+
+        @include scrollbar();
 
         code {
             padding: 0;
@@ -142,6 +160,10 @@ img {
 
     .dataframe {
         border: none;
+        white-space: nowrap;
+
+        @include scrollbar();
+
         tr {
             border: none;
         }
